Class/data-move added

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     
   </div>
   <div class="box">
-    <button id="paper">paper</button>
+    <button id="paper" class="player-move" data-move="paper">paper</button>
   </div>
   <div class="box">
-    <button id="stone">stone</button>
+    <button id="stone" class="player-move" data-move="stone">stone</button>
   </div>
   <div class="box">
-    <button id="scissors">scissors</button>
+    <button id="scissors" class="player-move" data-move="scissors">scissors</button>
   </div>
   <div id="output">
     
