--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
     </div>
     <div id="rounds"></div>
     <div class="box">
-      <button id="paper" class="player-move" data-move="paper">paper</button>
+      <button id="paper" class="player-move" data-move="paper">1 paper</button>
     </div>
     <div class="box">
-      <button id="stone" class="player-move" data-move="stone">stone</button>
+      <button id="stone" class="player-move" data-move="stone">2 stone</button>
     </div>
     <div class="box">
-      <button id="scissors" class="player-move" data-move="scissors">scissors</button>
+      <button id="scissors" class="player-move" data-move="scissors">3 scissors</button>
     </div>
     <div id="output"></div>
     <div id="results"></div>
+    <table id="table"></table>
   </div>
   <script  src="js/script.js"></script>
 
@@ -33,20 +34,8 @@
       <a href="#" class="close">x</a>
       <div class="content" id="score">
       </div>
-    </div>
-    <div class="modal" id="modal-two">
-      <a href="#" class="close">x</a>
-      <header>Modal two</header>
-      <div class="content">
-        <p>Dolor sit amet!</p>
-      </div>
-    </div>
-    <div class="modal" id="modal-three">
-      <a href="#" class="close">x</a>
-      <header>Modal three</header>
-      <div class="content">
-        <p>Dolor sit amet!</p>
-      </div>
+      <span class="score-table">
+      </span>
     </div>
   </div>
 
